--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,12 @@
         app:layout_constraintVertical_bias="0.228" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="fill_parent"
         android:layout_height="400dp"
-        app:layout_constraintTop_toBottomOf="@+id/instructions"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="40px"
-        tools:layout_editor_absoluteX="8dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/instructions">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -40,18 +40,17 @@
                 android:id="@+id/checkBoxBread"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Bread"
                 android:textSize="18sp"
-                tools:layout_editor_absoluteX="16dp"
-                android:onClick="onCheckboxClicked"
-                />
+                tools:layout_editor_absoluteX="16dp" />
 
             <CheckBox
                 android:id="@+id/checkBoxEgg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Eggs"
                 android:onClick="onCheckboxClicked"
+                android:text="Eggs"
                 android:textSize="18sp"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxMilk"
                 tools:layout_editor_absoluteX="16dp" />
@@ -61,9 +60,9 @@
                 android:id="@+id/checkBoxMilk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Milk"
                 android:textSize="18sp"
-                android:onClick="onCheckboxClicked"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxBread"
                 tools:layout_editor_absoluteX="15dp" />
 
@@ -71,9 +70,9 @@
                 android:id="@+id/checkBoxCheese"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Cheese"
                 android:textSize="18sp"
-                android:onClick="onCheckboxClicked"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxEgg"
                 tools:layout_editor_absoluteX="8dp" />
 
@@ -81,9 +80,9 @@
                 android:id="@+id/checkBoxTomato"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Tomatoes"
                 android:textSize="18sp"
-                android:onClick="onCheckboxClicked"
                 app:layout_constraintStart_toStartOf="parent"
 
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxPork"
@@ -93,9 +92,9 @@
                 android:id="@+id/checkBoxOnions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Onions"
                 android:textSize="18sp"
-                android:onClick="onCheckboxClicked"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxTomato"
                 tools:layout_editor_absoluteX="39dp" />
 
@@ -103,8 +102,8 @@
                 android:id="@+id/checkBoxChicken"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Chicken"
                 android:onClick="onCheckboxClicked"
+                android:text="Chicken"
                 android:textSize="18sp"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxBeef"
                 tools:layout_editor_absoluteX="8dp" />
@@ -113,9 +112,9 @@
                 android:id="@+id/checkBoxBeef"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Beef"
                 android:textSize="18sp"
-                android:onClick="onCheckboxClicked"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxButter"
                 tools:layout_editor_absoluteX="0dp" />
 
@@ -123,9 +122,9 @@
                 android:id="@+id/checkBoxPork"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Pork"
                 android:textSize="18sp"
-                android:onClick="onCheckboxClicked"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxChicken"
                 tools:layout_editor_absoluteX="0dp" />
 
@@ -143,22 +142,37 @@
                 android:id="@+id/checkBoxFlour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onCheckboxClicked"
                 android:text="Flour"
                 android:textSize="18sp"
-                android:onClick="onCheckboxClicked"
                 app:layout_constraintTop_toBottomOf="@+id/checkBoxCheese"
                 tools:layout_editor_absoluteX="8dp" />
+
             <EditText
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="cheese"
                 android:id="@+id/otherIngredients"
-                />
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="11px"
+                android:layout_marginRight="20px"
+                android:layout_marginBottom="35px"
+                android:hint="Other Ingredients" />
 
 
         </LinearLayout>
 
     </ScrollView>
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="NEXT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:layout_marginTop="25dp"
+        android:id="@+id/nextButton"
+        />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
